<resources>
    <string name="app_name">Cuenta Bolas</string>
    <string name="descripcion">Intenta de contabilizar cuántas bolas hay de cada color.</string>
    <string name="suerte">Mucha suerte !! : )</string>
    <string name="boton_inicio">¿ Empezamos ya ?</string>
    <string name="texto_animado">PREPARADOS, \n\n LISTOS... \n\n ¡YA!</string>
    <string name="pregunta">¿Cuántas bolas de cada color había \n\n moviéndose por la pantalla?</string>
    <string name="texto_rojo">Rojo:</string>
    <string name="texto_amarillo">Amarillo:</string>
    <string name="texto_azul">Azul:</string>
    <string name="texto_verde">Verde:</string>
    <string name="boton_comprobar">Comprobar resultado</string>
</resources>
