<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pregunta"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="254dp"
            android:layout_height="222dp">

            <TextView
                android:id="@+id/tvRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/texto_rojo"
                android:textColor="@color/colorRojo"
                app:layout_constraintEnd_toStartOf="@+id/etRojo"
                app:layout_constraintHorizontal_bias="0.238"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etRojo"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAmarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="28dp"
                android:text="@string/texto_amarillo"
                android:textColor="@color/colorAmarillo"
                app:layout_constraintEnd_toStartOf="@+id/etAmarillo"
                app:layout_constraintHorizontal_bias="0.227"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRojo" />

            <EditText
                android:id="@+id/etAmarillo"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRojo" />

            <TextView
                android:id="@+id/tvAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="28dp"
                android:text="@string/texto_azul"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/etAzul"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAmarillo" />

            <EditText
                android:id="@+id/etAzul"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAmarillo" />

            <TextView
                android:id="@+id/tvVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:text="@string/texto_verde"
                android:textColor="@color/colorVerde"
                app:layout_constraintEnd_toStartOf="@+id/etVerde"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAzul" />

            <EditText
                android:id="@+id/etVerde"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAzul" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btComprobar"
            style="@style/Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_comprobar" />
    </LinearLayout>

</LinearLayout>